# vdb-benchmarks

./: .gitignore  Cargo.toml  README.md  generation_settings.toml  hdf5_overlay.nix  justfile  shell.nix
benches/: elasticsearch.rs  qdrant.rs  vespa.rs
comitted_reports/2023-11-08.1.3e01c57/additional_data/elasticsearch/0000/: close.json  open.json
comitted_reports/2023-11-08.1.3e01c57/additional_data/elasticsearch/0001/: close.json  open.json
comitted_reports/2023-11-08.1.3e01c57/additional_data/qdrant/0000/: open.json
comitted_reports/2023-11-08.1.3e01c57/additional_data/qdrant/0001/: close.json
comitted_reports/2023-11-08.1.3e01c57/additional_data/qdrant/0002/: close.json
comitted_reports/2023-11-08.1.3e01c57/additional_data/vespa/0000/: close.json
comitted_reports/2023-11-08.1.3e01c57/criterion/report/: index.html
comitted_reports/2023-11-08_18:50:56.ac5f825/criterion/report/: index.html
comitted_reports/2023-11-09_22:14:53.93ea136/criterion/report/: index.html
docker/elasticsearch/: compose.yml
docker/elasticsearch/config/: elasticsearch.yml
docker/qdrant/: compose.yml
docker/qdrant/config/: config.yaml
docker/qdrant/image/: Dockerfile
docker/vespa/: compose.yml  deploy.sh  hosts.xml  services.xml
docker/vespa/schemas/: content.sd
src/: benchmarks.rs  consts.rs  databases.rs  distribution.rs  docker.rs  lib.rs  math.rs  resources.rs  utils.rs
src/benchmarks/: query_throughput.rs
src/databases/: elasticsearch.rs  qdrant.rs  vespa.rs
src/distribution/: choice.rs  date.rs  ids.rs  ingestion.rs  label.rs  range.rs  rng.rs
(+1018 files in other folders)
