[package]
name = "vdb-benchmarks"
version = "0.1.0"
edition = "2021"


[[bench]]
name = "qdrant"
harness = false

[[bench]]
name = "vespa"
harness = false

[[bench]]
name = "elasticsearch"
harness = false


[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
hdf5 = "0.8.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.2"
criterion = { version = "0.5.1", features = ["html_reports", "async", "async_tokio"] }
async-trait = "0.1.74"
uuid = { version = "1.5.0", features = ["serde"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros", "process"] }
ndarray = "0.15.6"
qdrant-client = "1.6.0"
derive_more = "0.99.17"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.107"
url = "2.4.1"
regex = "1.10.2"
once_cell = "1.18.0"
